# mumble-fg

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-reveal.yml  deploy.yml
docs/: README.md  bootstrap-dev-deploy.md  consolidated.md  conventions.md  deploy_manual.md  deploy_workflow.md  design.md  design_spec.md  fg-bg-contracts.md  fg-bg-integration-smoke.md  group_mapping_v1_plan.json  group_mapping_v1_plan.md  implementation-matrix.md  mumble-fg-bg-mockcube-state.md  mumble-fg-bg-system-design.md  operations.md  pilot-backup-restore-probe.md  profile-panel-wireframe.md  profile-panels.md  workflow-deploy.md
fg/: __init__.py  acl_sync.py  admin.py  apps.py  contracts.py  control.py  control_keyring.py  crypto.py  cube_extension.py  eligibility.py  eve_objects.py  group_mapping.py  host.py  integration.py  models.py  passwords.py  pilot_snapshot.py  pki.py  runtime.py  sidebar.py  tasks.py  test_acl_audit.py  test_acl_blocked.py  test_acl_permissions.py  test_control_diagnostics.py  test_group_mapping.py  test_install_alias.py  test_profile_panel.py  test_temp_links.py  tests.py  urls.py  views.py
fg/migrations/: 0000_initial.py  0001_access_rule.py  0001_acl_admin_and_pilot_snapshot_hash.py  0001_pilotsnapshothash.py  0004_bg_endpoint.py  (+7 more)
fgbg_common/: __init__.py  eligibility.py  entity_types.py  snapshot.py
monitor/: __init__.py  apps.py  checks.py  urls.py  views.py
mumble_ui/: __init__.py  apps.py
scripts/: precheck.sh  validate_commit_message.py
(+47 files in other folders)
